# MemMesh

./: .env.sample  .gitignore  Makefile  agentos.py  docker-compose.yml  main.py  pyproject.toml
agents/: extractor_agent.py  rag_team.py
agents/retrieval/: __init__.py  multi_hop.py
agents/router/: query_rewriter.py  query_router.py
auth/: jwt.py  middleware.py  models.py  routes.py
backend/: .env.example  .gitignore  Makefile  config.py  main.py  requirements.txt
backend/api/: server.py
backend/auth/: jwt.py  middleware.py  passwords.py
backend/db/: sqlite.py
backend/tests/: conftest.py  test_auth_api.py  test_health.py  test_jwt.py  test_middleware.py  test_passwords.py
db/: auth_store.py  citation.py  dependencies.py  graph_store.py  session_store.py  vector_store.py
db/lifecycle/: memory_manager.py
db/migrations/: 001_auth_sessions.sql
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts
frontend/src/: app.css  store.ts
scripts/: verify_connection.py
tests/e2e/: conftest.py  test_chat_flow.py  test_health.py  test_memory_panels.py  test_session.py
tests/unit/: test_api.py  test_auth_middleware.py  test_auth_routes.py  test_auth_store.py  test_chunker.py  test_citation.py  test_embedder.py  test_extractor_agent.py  test_graph_store.py  test_graph_tool.py  test_ingestion_api.py  test_ingestion_task.py  test_input_validator.py  test_jwt.py  test_memory_manager.py  (+12 more)
tools/: graph_tool.py  vector_tool.py
utils/: chunker.py  embedder.py  input_validator.py  observability.py
workers/: celery_app.py  tasks.py
(+27 files in other folders)
