[project]
name = "graph-rag-memory-mesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.7",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "google-genai>=2.3.0",
    "httpx>=0.28.1",
    "lancedb>=0.30.2",
    "neo4j>=6.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: isolated unit tests with mocked dependencies",
    "e2e: end-to-end tests — requires the full stack to be running"
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "scripts/*", "frontend/*", ".venv/*"]
